...
            "value" : "Hinzufügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir"
...
      "isCommentAutoGenerated" : true
    },
    "Add sessions or activities to plan your day" : {
      "comment" : "A description of what the \"Add Activity\" button does.",
      "isCommentAutoGenerated" : true
    },
    "Add Task" : {
      "comment" : "The title of the task detail sheet.",
      "isCommentAutoGenerated" : true
    },
    "Add venue" : {
      "comment" : "A placeholder text for a text field used to add a venue.",
      "isCommentAutoGenerated" : true
...
            "value" : "Aktivität hinzufügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Activity"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir actividad"
...
    "agenda" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agenda"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agenda"
...
            "value" : "Bestätigen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirm"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmar"
...
            "state" : "translated",
            "value" : "谢谢！"
          }
        }
      }
    },
    "Continue" : {
      "comment" : "A button label that says \"Continue\".",
      "isCommentAutoGenerated" : true
    },
    "continueWithApple" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Copy" : {
      "comment" : "A button label that says \"Copy\".",
      "isCommentAutoGenerated" : true
    },
    "Create Event" : {
      "comment" : "The text for the button that allows a user to create an event.",
      "isCommentAutoGenerated" : true
    },
    "createEvent" : {
      "extractionState" : "manual",
      "localizations" : {
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar"
...
            "value" : "Veranstaltung löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Event"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar evento"
...
      "isCommentAutoGenerated" : true
    },
    "Event Creation Failed" : {
      "comment" : "The title of an alert that appears when an event creation fails.",
      "isCommentAutoGenerated" : true
    },
    "Event Name" : {
      "comment" : "A label for the event name field in the event details step.",
      "isCommentAutoGenerated" : true
    },
    "eventDate" : {
      "extractionState" : "manual",
      "localizations" : {
...
    "name" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
...
            "value" : "Profil"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
            "value" : "Speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
            "value" : "Aufgaben"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tasks"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tareas"
...
            "value" : "Zuhause"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Casa"
...
